--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Build
           command: yarn build
-  
+
   artifacting:
     working_directory: /tmp
     docker:
@@ -55,5 +55,6 @@ workflows:
   sample:
     jobs:
       - build
+      - artifacting
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
       # - node/test
