fix(gh-pages): adds fallback container file to redirect github to the page
see: https://angular.io/guide/deployment#deploy-to-github-pages

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
             yarn build;
             chmod +x .circleci/push-gh-pages.sh;
             sh .circleci/push-gh-pages.sh dist;
+            cp dist/index.html dist/404.html;
 
 workflows:
   # Below is the definition of your workflow.
